# cpp-python-binding-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  benchmark.sh  build.sh  collect_and_plot.py
src/cpp-execs/: CMakeLists.txt  config.h.in  exec-gameoflife-complex.cpp  exec-gameoflife-simple.cpp  exec-gameoflife-single.cpp  exec-mandelbrot-complex.cpp  exec-mandelbrot-simple.cpp  exec-mandelbrot-single.cpp  helpers.h
src/cpp-lib/: CMakeLists.txt  cgameoflife.cpp  cgameoflife.h  cmandelbrot.cpp  cmandelbrot.h  gameoflife.cpp  gameoflife.h  mandelbrot.cpp  mandelbrot.h
src/py-cffi/: CMakeLists.txt  pkg_cffi.py
src/py-cppyy/: CMakeLists.txt  pkg_cppyy.py
src/py-cython/: CMakeLists.txt  gameoflife.pxd  gameoflife.pyx  mandelbrot.pxd  mandelbrot.pyx  setup.py
src/py-manual/: CMakeLists.txt  manual-wrapper-lib.cpp  pycolor.cpp  pycolor.h  pygameoflife.cpp  pygameoflife.h  pymandelbrot.cpp  pymandelbrot.h  pyvec2.cpp  pyvec2.h
src/py-nanobind/: CMakeLists.txt  py-nanobind.cpp  pycolor.cpp  pygameoflife.cpp  pymandelbrot.cpp  pyvec2.cpp
src/py-nanobind/nanobind/: complex.h
src/py-pybind11/: CMakeLists.txt  py-pybind11.cpp  pycolor.cpp  pygameoflife.cpp  pymandelbrot.cpp  pyvec2.cpp
src/py-scripts/: CMakeLists.txt  helpers.py  loader.py.in  py-gameoflife-complex.py  py-gameoflife-simple.py  py-gameoflife-single.py  py-mandelbrot-complex.py  py-mandelbrot-simple.py  py-mandelbrot-single.py
src/py-swig/: CMakeLists.txt  pkg_swig.i  setup.py
